--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </nav>
 
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"><i data-lucide="linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"
+          ><i data-lucide="linkedin"></i
+        ></a>
         <a href="https://github.com/s0lix-x"><i data-lucide="github"></i></a>
         <a href="https://x.com/ignorantpipil"><i data-lucide="twitter"></i></a>
         <a href="https://www.instagram.com/d0gsh1ttt/"
@@ -67,7 +69,9 @@
       </div>
 
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"><i data-lucide="linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"
+          ><i data-lucide="linkedin"></i
+        ></a>
         <a href="https://github.com/s0lix-x"><i data-lucide="github"></i></a>
         <a href="https://x.com/ignorantpipil"><i data-lucide="twitter"></i></a>
         <a href="https://www.instagram.com/d0gsh1ttt/"
@@ -235,7 +239,7 @@
         <div class="project-card">
           <img src="assets/Stop Bullying.jpg" alt="Poster Stop Bullying" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC9FgaEx0N/">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 1</h3>
@@ -246,7 +250,7 @@
         <div class="project-card">
           <img src="assets/Rengoku Tugas TRACKING.jpg" alt="Poster Rengoku" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC8o67EwzH/?img_index=1">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 2</h3>
@@ -257,7 +261,7 @@
         <div class="project-card">
           <img src="" alt="Project 3" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC9FgaEx0N/">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 3</h3>
@@ -268,7 +272,7 @@
         <div class="project-card">
           <img src="" alt="Project 4" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC9FgaEx0N/">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 4</h3>
@@ -279,7 +283,7 @@
         <div class="project-card">
           <img src="" alt="Project 5" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC9FgaEx0N/">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 5</h3>
@@ -290,7 +294,7 @@
         <div class="project-card">
           <img src="" alt="Project 6" />
           <div class="overlay">
-            <a href="#">View Project</a>
+            <a href="https://www.instagram.com/p/DSC9FgaEx0N/">View Project</a>
           </div>
           <div class="info">
             <h3>Project Title 6</h3>
@@ -353,7 +357,9 @@
           <div class="follow-me">
             <h3>Follow Me</h3>
             <div class="social-media-contact">
-              <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"><i data-lucide="linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"
+                ><i data-lucide="linkedin"></i
+              ></a>
               <a href="https://github.com/s0lix-x"
                 ><i data-lucide="github"></i
               ></a>
@@ -417,7 +423,9 @@
       <div class="social-media-footer">
         <h3>Follow Me</h3>
         <div class="social-media">
-          <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"><i data-lucide="linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/damar-hadikusuma-494b92398/g"
+            ><i data-lucide="linkedin"></i
+          ></a>
           <a href="https://github.com/s0lix-x"><i data-lucide="github"></i></a>
           <a href="https://x.com/ignorantpipil"
             ><i data-lucide="twitter"></i
@@ -431,16 +439,12 @@
         © 2025 Damar Yuswira Hadikusuma. All rights reserved.
       </div>
     </footer>
-
     <script>
       const menuToggle = document.getElementById("menu-toggle");
       const navLinks = document.getElementById("nav-links");
       menuToggle.addEventListener("click", () => {
         navLinks.classList.toggle("active");
       });
-    </script>
-
-    <script>
       lucide.createIcons();
     </script>
     <script src="script.js"></script>
